fix: add overflow-wrap: anywhere for long word languages

--- a/assets/styles/src/base/_globals.scss
+++ b/assets/styles/src/base/_globals.scss
@@ -5,6 +5,7 @@
 html {
   font-size: var(--font-size-base);
   scrollbar-gutter: stable;
+  overflow-wrap: anywhere;
 }
 
 body {
